--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
-.body{
-    background-color: aqua;
-}
+.cajapadre{
+    display: flex;  
+  }
+  article{
+      display: flex;
+      flex-direction: column;
+      margin-top: 30px;
+      padding: 30px;
+  
+  
+  }
+  img{
+     height: 200px; 
+    width: 150px;
+  }
