--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,67 @@
     font-weight: 500;
     margin-top: 0.2%;
 }
+
+*{box-sizing: border-box;}
+body{margin: 0;}
+ul, ol{ padding: 0;}
+li{list-style-type: none;}
+a {text-decoration: none; color: #000;}
+
+header{
+    height:15vh;
+    border-bottom:  2px solid #707070;
+    display: flex;
+    align-items: center;
+}
+nav { 
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.logo {
+    display: flex;
+    justify-content: start;
+    width:6%;
+    margin: 0 0 0 5%;
+    border-radius: 110px;
+    height: 10vh;
+
+}
+header a { 
+    font-family: 'Poppins';
+    font-weight: bold;
+    font-size:23px;
+    margin:0 3.5%;
+}
+
+.favoritos {
+    align-self: center;
+    width:80%;
+    margin-top:20%;
+}
+
+.subtitulo{
+    font-family: 'Poppins';
+    margin: 3%;
+}
+
+footer{
+  text-align: center;
+  font-size: small;
+  font-family: Arial, Helvetica, sans-serif;
+
+  background-color: rgb(200,0,0);
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 15px;
+ 
+  width: 1180px;
+  align-self: center;
+  margin: auto;
+  display: block;
+ 
+}
