--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,22 @@ a {
     text-decoration: none; 
     color: rgb(255, 254, 254);
 }
+.flexBoton{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: purple;
+}
+.verMas {
+    background-color: purple;
+    color: white;
+    height: 40px;
+    width: 100px;
+    font-weight: bold;
+    font-family: poppins;
+    font-size: 16px;
+
+}
 
 /* header */
 
@@ -188,7 +204,7 @@ header a {
     margin: 0 auto;
     justify-content: flex-start;
     height:20vh;
-    align-items: center;
+    align-self: center;
 }
 .creadoras {
     font-family: 'Poppins';
@@ -197,6 +213,7 @@ header a {
     font-size:25px;
     color: white;
     font-weight: bold;
+
 }
 .elementoFooter {
     font-family: 'Poppins';
@@ -215,10 +232,72 @@ header a {
 }
 .footer{
     width: 100%;
-    height: 200px;
+    height: 120px;
     background-color: purple;
     color: white;
     font-size:23px;
 
 }
+/* lista de genero */
 
+
+
+.contenedorGenero{
+    display: flex;
+    flex-direction: column;   
+    justify-content: space-around;
+    height:500px;
+    align-self: center;
+
+}
+.listaGenero{
+    background-color: purple;
+    color: white;
+    font-weight: bold;
+    font-family: poppins;
+    align-self: flex-start;
+    margin-left: 300px;
+    height: 42px;
+    width: 200px;
+    justify-content: center;
+    font-size: 20px;
+    text-align: center;
+    padding: 10px;
+}
+.tituloGenero{
+    color: white;
+    font-weight: bold;
+    font-family: poppins;
+    align-self: flex-start;
+    margin-left: 300px;
+    height: 42px;
+    width: 300px;
+    justify-content: center;
+    font-size: 30px;
+    text-align: left;
+}
+.tituloGeneroSeries{
+    display: flex;
+    flex-direction: column;   
+    justify-content: space-around;
+    height:500px;
+    align-self: center;
+}
+.contenedorGeneroSeries{
+    display: flex;
+    flex-direction: column;   
+    justify-content: space-around;
+    height:500px;
+    align-self: center;
+}
+/* Reglas resultado de busqueda*/
+
+.tituloResultado{
+    text-align: center;
+    color: white;
+}
+.oculta{
+    text-align: center;
+    color: white;
+    display: none;
+}
