--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ header a {
     font-size: 20px;
     margin-bottom: 1vh;
 }
+
 /* icono*/
 .articleIcono{
     display: flex;
@@ -240,55 +241,70 @@ header a {
 }
 /* lista de genero */
 
-
-
-.contenedorGenero{
+.containerGenero{
     display: flex;
-    flex-direction: column;   
+    flex-wrap: wrap;
+    flex-direction: row;   
     justify-content: space-around;
-    height:500px;
-    align-self: center;
-
+    padding: 10px;
+    height:550px;
 }
-.listaGenero{
-    background-color: purple;
-    color: white;
-    font-weight: bold;
-    font-family: poppins;
+.generoPrueba{
     align-self: flex-start;
-    margin-left: 300px;
-    height: 42px;
+    margin-left: 250px;
+    height: 300px;
     width: 200px;
     justify-content: center;
     font-size: 20px;
     text-align: center;
     padding: 10px;
+    text-decoration: none;
 }
+.seriesPrueba{
+    align-self: flex-start;
+    margin-right: 250px;
+    height: 300px;
+    width: 200px;
+    justify-content: center;
+    font-size: 20px;
+    text-align: center;
+    padding: 10px;
+    text-decoration: none;
+}
+
 .tituloGenero{
+    background-color: purple;
     color: white;
     font-weight: bold;
     font-family: poppins;
-    align-self: flex-start;
-    margin-left: 300px;
-    height: 42px;
-    width: 300px;
     justify-content: center;
     font-size: 30px;
     text-align: left;
+    padding: 10px;
+    width: 200px;
+    border-radius: 5px;
+
+
 }
-.tituloGeneroSeries{
+.listaGenero{
     display: flex;
-    flex-direction: column;   
+    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: space-around;
-    height:500px;
-    align-self: center;
+    padding: 10px;
 }
-.contenedorGeneroSeries{
-    display: flex;
-    flex-direction: column;   
-    justify-content: space-around;
-    height:500px;
-    align-self: center;
+.genero{
+    background-color: purple;
+    color: white;
+    text-decoration: none;
+    height: 42px;
+    width: 200px;
+    font-weight: bold;
+    font-family: poppins;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 5px;
+
 }
 /* Reglas resultado de busqueda*/
 
