--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ header a {
     display: flex;
     flex-direction: row;   
     margin: 0 auto;
-    justify-content: flex-start;
+    justify-content: center;
     height:20vh;
     align-self: center;
 }
@@ -518,6 +518,46 @@ header a {
     font-size: 20px;
     padding: 10px;
     border-radius: 5px;
+
+}
+/* footer*/
+.listaFooter {
+    display: flex;
+    flex-direction: column;   
+    margin: 0 auto;
+    justify-content: center;
+    height:150px;
+    align-self: center;
+}
+.creadoras {
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size:25px;
+    color: white;
+    font-weight: bold;
+
+}
+.elementoFooter {
+    font-family: 'Poppins';
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 20px;
+}
+.nombreCreador {
+    font-size:20px; 
+    margin:0;
+    color: white;
+    font-weight: bold;
+    font-size:23px;
+}
+.footer{
+    width: 100%;
+    height: 150px;
+    background-color: purple;
+    color: white;
+    font-size:23px;
 
 }
 }
