--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ footer{
        width: 120px;
        border-radius: 5px;
      }
-     header{
+    header{
         height: 15vh;
         width: 420px;
         border-bottom: 2px solid #707070;
@@ -341,18 +341,18 @@ footer{
         justify-content: center;
     }
     /*Pagina de detalle*/
-.section{
+    .section{
     display: flex;
     flex-direction: column;
     max-width: 100%;
-}
-.article{
+    }
+    .article{
     align-self: center;
     margin-bottom: 2vh;
     margin-top: 0px;
 
-}
-.poster{
+    }
+    .poster{
     height: auto;
     width: 50%;
     border-radius: 8%;
@@ -360,63 +360,63 @@ footer{
     margin-bottom: 0px;
     margin-left: 2vw;
     margin-right: 2vw;
-}
-.tituloPelicula{
+    }
+    .tituloPelicula{
     font-size: 25px;
     margin-bottom: 2vh;
     max-width: 100%;
-}
+    }
 
-.fecha{
+    .fecha{
     font-size: 15px;
     margin-bottom: 1vh;
     font-weight: normal;
     align-self: flex-start;
-}
+    }
 
-.descripcionPelicula{
+    .descripcionPelicula{
     font-size: 12px;
     margin-bottom: 0px;
     
-}
-.generoPelicula{
+    }
+    .generoPelicula{
     font-size: 12px;
     margin-bottom: 1vh;
     align-self: flex-start;
     
-}
-.duracion{
+    }
+    .duracion{
     font-size: 12px;
     align-self: flex-start;
-}
-.rating{
+    }
+    .rating{
     font-size: 12px;
     margin-bottom: 1vh;
-}
+    }
 /* icono*/
-.articleIcono{
+    .articleIcono{
     display: flex;
     align-content: center;
     margin-bottom: 10vh;
 
-}
+    }
 
-.iconoCorazon{
+    .iconoCorazon{
     margin: 0px;
     width: 50px;
     height: 50px;
-}
+    }
 
 /*Genero*/
-.containerGenero{
+    .containerGenero{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;   
     justify-content: space-around;
     padding: 10px;
     height:100%;
-}
-.generoPrueba{
+    }
+    .generoPrueba{
     align-self: flex-start;
     margin-left: 25%;
     height: 70%;
@@ -426,8 +426,8 @@ footer{
     text-align: center;
     padding: 10px;
     text-decoration: none;
-}
-.seriesPrueba{
+    }
+    .seriesPrueba{
     align-self: flex-start;
     margin-left: 25%;
     height: 70%;
@@ -437,9 +437,9 @@ footer{
     text-align: center;
     padding: 10px;
     text-decoration: none;
-}
+    }
 
-.tituloGenero{
+    .tituloGenero{
     background-color: purple;
     color: white;
     font-weight: bold;
@@ -451,15 +451,15 @@ footer{
     border-radius: 5px;
 
 
-}
-.listaGenero{
+    }
+    .listaGenero{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
     padding: 10px;
-}
-.genero{
+    }
+    .genero{
     background-color: purple;
     color: white;
     text-decoration: none;
@@ -470,43 +470,13 @@ footer{
     padding: 10px;
     border-radius: 5px;
 
-}
+    }
 /* footer*/
-.listaFooter {
-    display: flex;
-    flex-direction: column;   
-    margin: 0 auto;
-    justify-content: center;
-    height:150px;
-    align-self: center;
-}
-.creadoras {
-    font-weight: 600;
-    font-size:25px;
-    color: white;
-    font-weight: bold;
-
-}
-.elementoFooter {
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    font-size: 20px;
-}
-.nombreCreador {
-    font-size:20px; 
-    margin:0;
-    color: white;
-    font-weight: bold;
-    font-size:23px;
-}
-.footer{
-    width: 100%;
-    height: 150px;
+    footer{
     background-color: purple;
-    color: white;
-    font-size:23px;
-
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    flex-direction: row;
 }
 }
