--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,7 @@ footer{
     justify-content: space-around;
     padding: 10px;
     }
+   
     .genero{
     background-color: purple;
     color: white;
@@ -505,7 +506,8 @@ footer{
 .imgFooter{
     display: flex;
     justify-content: end;
-    width:20%;
+    width:5%;
+    height: 50%;
     margin: 0 0 0 5%;
     height: 10vh;
 }
